@@ -2,32 +2,47 @@ package com.formulario.athena.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
+
+import java.util.Arrays;
 
 @Configuration
 public class GlobalCorsFilter {
 
-
     @Bean
-    public FilterRegistrationBean<org.springframework.web.filter.CorsFilter> corsFilter() {
-        var cfg = new CorsConfiguration();
-        cfg.setAllowCredentials(false);
-        cfg.setAllowedOriginPatterns(java.util.List.of(
-                "https://front-correspondencias-athena.vercel.app",
-                "http://localhost:*",
-                "http://127.0.0.1:*"
+    public CorsFilter corsFilter() {
+        CorsConfiguration config = new CorsConfiguration();
+
+        // ✅ PERMITE todas as origens (ou especifique as que precisa)
+        config.addAllowedOrigin("*");
+        // Ou especifique:
+        // config.setAllowedOrigins(Arrays.asList(
+        //     "https://front-correspondencias-athena.vercel.app",
+        //     "http://localhost:5173",
+        //     "http://127.0.0.1:5173"
+        // ));
+
+        // ✅ PERMITE todos os métodos
+        config.addAllowedMethod("*");
+
+        // ✅ PERMITE todos os headers
+        config.addAllowedHeader("*");
+
+        // ✅ EXPÕE os headers necessários para download
+        config.setExposedHeaders(Arrays.asList(
+                "Content-Disposition",
+                "Content-Length",
+                "Content-Type"
         ));
-        cfg.setAllowedMethods(java.util.List.of("GET","POST","PUT","DELETE","OPTIONS"));
-        cfg.setAllowedHeaders(java.util.List.of("*"));
-        cfg.setExposedHeaders(java.util.List.of("Content-Disposition","Content-Length","Content-Type"));
 
-        var src = new org.springframework.web.cors.UrlBasedCorsConfigurationSource();
-        src.registerCorsConfiguration("/**", cfg);
+        // ✅ IMPORTANTE: Para requests com credenciais, mas você disse allowCredentials=false
+        config.setAllowCredentials(false);
 
-        var bean = new org.springframework.boot.web.servlet.FilterRegistrationBean<>(new org.springframework.web.filter.CorsFilter(src));
-        bean.setOrder(org.springframework.core.Ordered.HIGHEST_PRECEDENCE);
-        return bean;
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
+
+        return new CorsFilter(source);
     }
 }
-
